--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */  {
+ {
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -27,15 +27,15 @@
 
 /* Select the image with the class "yellow_diamond" */
 
-/*selector for yellow diamond goes here */ {
+.yellow_diamond {
   position: absolute;
   z-index: 4;
   top: 325px;
   left: 200px;
 }
 
-/* Select the image that has ad id of diamond */
-/*selector for diamond goes here */ {
+
+#diamond{
   position: absolute;
   z-index: 3;
   top: 300px;
